--- a/styles/app.css
+++ b/styles/app.css
@@ -78,7 +78,7 @@ ul li span:first-child{
     margin: 1.5rem 0;
 }
 .filter{
-  margin: 0 0 1rem 0;
+  margin:1rem 0;
 }
 
 input[type=text] {
@@ -98,7 +98,7 @@ button {
   font-size: 0.9rem;
   padding: 0.6rem 1em;
   color: white;
-  margin: 0 0.25rem;
+  margin: 0 0.25rem 0 0;
   text-align: center;
   background: #86b32d;
   border-bottom: 1px solid #5d7d1f;
